--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadyantra-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
