--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "esnext"
     ],
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": "lib/typings",
     "stripInternal": true,
     "esModuleInterop": true,
